[package]
name = "morningexapiproduction"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "tls-rustls", "chrono" ] }
axum-macros = "0.4.1"
dotenv = "0.15.0"
anyhow = "1.0.81"
time = "0.3.34"
oauth2 = "4.4.2"
async-session = "3.0.0"
headers = "0.4.0"
hostname = "0.4.0"
constant_time_eq = "0.3.0"
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"], default-features = false}
uuid = { version = "1.8.0", features = ["v4"] }
http = "1.1.0"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
chrono = "0.4.35"
async-trait = "0.1.77"
once_cell = "1.19.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
colored = "2.1.0"
sha256 = "1.5.0"
